# SPIRED-Fitness

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  run_SPIRED.py
.github/workflows/: docker-image.yml
environment/: Dockerfile
