[project]
name = "spired-fitness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython==1.83",
    "click==8.1.7",
    "einops==0.7.0",
    "fair-esm==2.0.0",
    "fastapi>=0.115.12",
    "pandas==2.2.0",
    "torch==2.1.0",
    "uvicorn[standard]>=0.34.2",
]
